View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025955 | Community | OCCT:Visualization | public | 2015-03-17 20:23 | 2015-05-14 15:31 |
Reporter | Pawel | Assigned To | bugmaster | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025955: Visualization, AIS_Shape::UnsetColor() - fix storing color in a local variable | ||||
Description | Quantity_Color aColor = aDefaultMat.AmbientColor(); if (myDrawer->HasLink()) { Quantity_Color aColor = myDrawer->Link()->ShadingAspect()->Color (myCurrentFacingModel); } mat.SetColor (aColor); | ||||
Steps To Reproduce | Not applicable. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR25955 has been created by Pawel. SHA-1: d0ba264ff1a858749e0820948cc099d8433cda93 Detailed log of new commits: Author: Pawel Date: Tue Mar 17 18:27:49 2015 +0100 Removed the color declaration overriding another variable. |
|
Branch 25955 pushed. Please review. |
|
Please test the patch |
|
Dear BugMaster, Branch CR25955 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: d0ba264ff1a858749e0820948cc099d8433cda93 Number of compiler warnings: occt component: Linux: 18 (18 on master) Windows: 0 (0 on master) products component: Linux: 11 (11 on master) Windows: 4 (4 on master) Regressions/Differences: Not detected Testing cases: Not needed Testing on Linux: Total MEMORY difference: 89826858 / 90001620 Total CPU difference: 58339.789999999986 / 58911.169999999984 Testing on Windows: Total MEMORY difference: 58088432 / 58093704 Total CPU difference: 48598.46875 / 57284.859375 |
|
Branch CR25955 has been deleted by kgv. SHA-1: d0ba264ff1a858749e0820948cc099d8433cda93 |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-03-17 20:23 | Pawel | New Issue | |
2015-03-17 20:23 | Pawel | Assigned To | => Pawel |
2015-03-17 20:28 | git | Note Added: 0038454 | |
2015-03-17 20:29 | Pawel | Note Added: 0038455 | |
2015-03-17 20:29 | Pawel | Assigned To | Pawel => kgv |
2015-03-17 20:29 | Pawel | Status | new => resolved |
2015-03-17 20:29 | Pawel | Steps to Reproduce Updated | |
2015-03-19 09:21 | kgv | Note Added: 0038673 | |
2015-03-19 09:21 | kgv | Assigned To | kgv => bugmaster |
2015-03-19 09:21 | kgv | Severity | minor => trivial |
2015-03-19 09:21 | kgv | Status | resolved => reviewed |
2015-03-19 09:21 | kgv | Product Version | 6.9.0 => |
2015-03-19 09:21 | kgv | Summary | AIS_Shape::UnsetColor - Storing color in a local variable => Visualization, AIS_Shape::UnsetColor() - fix storing color in a local variable |
2015-03-19 10:22 |
|
Assigned To | bugmaster => apv |
2015-03-19 16:06 |
|
Test case number | => Not needed |
2015-03-19 16:17 |
|
Note Added: 0038695 | |
2015-03-19 16:17 |
|
Assigned To | apv => bugmaster |
2015-03-19 16:17 |
|
Status | reviewed => tested |
2015-03-20 13:34 | bugmaster | Changeset attached | => occt master 4e2914a6 |
2015-03-20 13:34 | bugmaster | Status | tested => verified |
2015-03-20 13:34 | bugmaster | Resolution | open => fixed |
2015-04-09 09:49 | git | Note Added: 0039449 | |
2015-05-14 15:28 |
|
Status | verified => closed |
2015-05-14 15:31 |
|
Fixed in Version | => 6.9.0 |