0025955: Visualization, AIS_Shape::UnsetColor() - fix storing color in a local variable

Removed the color declaration overriding another variable.